--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - .:/app:delegated
     ports:
-      - 8000:8000
+      - ${PORT}:8000
     networks:
       - app
     restart: always
